@@ -24,6 +24,8 @@ Relase ...
   name, e.g. "\[less]".
 * [nt]roff: The "-mm" macros no longer print "Sun Microsystems" in calls to
   ".AU" macros and the like.
+* troff: The "\S" escape sequence has been fixed; its use could lead to core
+  dumps with the previous release.
 
 Release 050915
 * troff: Can now directly handle .afm/.pfb/.pfa files (i.e. PostScript
